# mastermind

./: Cargo.toml  README.md  asset-manifest.json  coi.js  flake.nix  index.html  manifest.json
.github/workflows/: rust.yml
cli_solver/: Cargo.toml
cli_solver/src/: solver.rs
libmastermind/: Cargo.toml
libmastermind/benches/: minMax.rs  min_max.rs
libmastermind/src/: eval_counter.rs  lib.rs  positions.rs  symmetry.rs
static/css/: main.4e072275.css  main.4e072275.css.map  main.da52b36c.css  main.da52b36c.css.map  main.ef70e6ce.css  main.ef70e6ce.css.map
static/js/: 210.5ff8653f.chunk.js  210.5ff8653f.chunk.js.map  210.cb8914e5.chunk.js  210.cb8914e5.chunk.js.map  210.d3168f45.chunk.js  210.d3168f45.chunk.js.map  210.e65aff79.chunk.js  210.e65aff79.chunk.js.map  267.048cca77.chunk.js  267.048cca77.chunk.js.map  267.0957d858.chunk.js  267.0957d858.chunk.js.map  267.339f1ff7.chunk.js  267.339f1ff7.chunk.js.map  267.de3fa857.chunk.js  267.de3fa857.chunk.js.map  352.71d63801.chunk.js  352.71d63801.chunk.js.map  388.598942e8.chunk.js  388.598942e8.chunk.js.map  388.95930ee8.chunk.js  388.95930ee8.chunk.js.map  388.b04f6a07.chunk.js  388.b04f6a07.chunk.js.map  388.e877c74c.chunk.js  388.e877c74c.chunk.js.map  main.6732c476.js  main.6732c476.js.map  main.9f4382a2.js  main.9f4382a2.js.map  main.d6839754.js  main.d6839754.js.map  (+2 more)
web/: .gitignore  Cargo.toml
web/src/: lib.rs
web/www/: LICENSE-MIT  package.json  tsconfig.json
web/www/public/: index.html
web/www/src/: board.tsx  colors.tsx  game.tsx  index.tsx  menu.tsx  style.css  wasm-workers.tsx
(+4 files in other folders)
